--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "node": ">=0.8.0"
     },
     "dependencies": {
+        "request":"2.11.4"
     },
     "devDependencies": {
         "jasmine-node": "1.x.x"
