adding myself to contrib list

--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
         "name": "Michael Brooks",
         "email": "michael@michaelbrooks.ca",
         "url": "http://michaelbrooks.ca/"
+    },
+    {
+        "name":" Fil Maj",
+        "email": "maj.fil@gmail.com",
+        "url": "http://filmaj.ca"
     }]
 }
