--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "node": ">=0.8.0"
     },
     "dependencies": {
-        "request":"2.11.4"
+        "request":"2.11.x"
     },
     "devDependencies": {
         "jasmine-node": "1.x.x"
