--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "api"
     ],
     "preferGlobal": "false",
-    "main": "./lib/main.js",
+    "main": "./lib/client.js",
     "scripts": {
         "test": "./node_modules/.bin/jasmine-node --color --verbose spec"
     },
