--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
         "request":"2.11.x"
     },
     "devDependencies": {
-        "jasmine-node": "1.1.x",
-        "express": "3.x.x"
+        "jasmine-node": "1.1.x"
     },
     "optionalDependencies": {
     },
