[npm] Update npm test script for Windows.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preferGlobal": false,
     "main": "./lib/client.js",
     "scripts": {
-        "test": "./node_modules/.bin/jasmine-node --color --verbose spec"
+        "test": "jasmine-node --color --verbose spec"
     },
     "engines": {
         "node": ">=0.8.0"
