--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preferGlobal": false,
     "main": "./lib/client.js",
     "scripts": {
-        "test": "jasmine-node --color --verbose spec"
+        "test": "jasmine-node --color spec"
     },
     "engines": {
         "node": ">=0.8.0"
