--- a/package.json
+++ b/package.json
@@ -14,27 +14,28 @@
     "preferGlobal": false,
     "main": "./lib/client.js",
     "scripts": {
-        "test": "jasmine-node --color spec"
+        "test": "npx jasmine JASMINE_CONFIG_PATH=spec/jasmine.json"
     },
     "engines": {
-        "node": ">=0.8.0"
+        "node": ">=6.0.0"
     },
     "dependencies": {
-        "request":"2.11.x"
+        "request": "^2.88.0"
     },
     "devDependencies": {
-        "jasmine-node": "1.14.5"
+        "jasmine": "^3.2.0"
     },
-    "optionalDependencies": {
-    },
-    "contributors": [{
-        "name": "Michael Brooks",
-        "email": "michael@michaelbrooks.ca",
-        "url": "http://michaelbrooks.ca/"
-    },
-    {
-        "name":" Fil Maj",
-        "email": "maj.fil@gmail.com",
-        "url": "http://filmaj.ca"
-    }]
+    "optionalDependencies": {},
+    "contributors": [
+        {
+            "name": "Michael Brooks",
+            "email": "michael@michaelbrooks.ca",
+            "url": "http://michaelbrooks.ca/"
+        },
+        {
+            "name": " Fil Maj",
+            "email": "maj.fil@gmail.com",
+            "url": "http://filmaj.ca"
+        }
+    ]
 }
